src/test/ui/issues/issue-32709.stderr
error[E0277]: `?` couldn't convert the error to `()`
  --> $DIR/issue-32709.rs:4:11
   |
LL |     Err(5)?;
   |           ^ the trait `std::convert::From<{integer}>` is not implemented for `()`
   |
   = note: the question mark operation (`?`) implicitly performs a conversion on the error value using the `From` trait
   = note: required by `std::convert::From::from`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
